kubernetes/overlays/dev/messagebus-patch.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: internal
    metallb.universe.tf/allow-shared-ip: cryoem-daq-dev
  name: redis
#spec:
#  loadBalancerIP: 172.23.99.160


---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-primary
spec:
  selector:
    matchLabels:
      role: messagebus
  replicas: 1
  template:
    metadata:
      labels:
        role: messagebus
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: redis-primary
        image: redis:6.0.14
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
          name: redis-primary
        volumeMounts:
        - name: redis-data
          mountPath: /data
        args: ["redis-server", "--appendonly", "yes", "--requirepass", "$(REDIS_PASSWORD)"]
  volumeClaimTemplates:
  - metadata:
      name: redis-data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: cryoem-daq-dev--sdf-redis
      resources:
        requests:
          storage: 5Gi
